@@ -163,7 +163,16 @@ public class GlobalConfigure extends ConfigureFactory {
 	 */
 	@Override
 	public void reloadSettings() {
-
+		if (log.isInfoEnabled()) {
+			log.info("reloading settings");
+		}
+		loadSettings();
+		loadSessions();
+		loadMacros();
+		loadKeyStrokes();
+		if (log.isInfoEnabled()) {
+			log.info("Done (reloading settings).");
+		}
 	}
 
 	/**
